@@ -1,5 +1,7 @@
 1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* texinfo8.test: texinfo.tex is only disted by aux/Makefile.
+
 	* texinfo8.test: New file.
 	* Makefile.am (TESTS): Added texinfo8.test.
 
